Simplify S3 storage profile fields
- Drop server side encryption options for storage profile, fixes #142
- Change property name withPathStyleAccessEnabled, fixes #139
