# frontend/src/openapi/openapi.json
@@ -442,10 +442,6 @@
         "type" : "string",
         "enum" : [ "MEMBER", "OWNER" ]
       },
-      "S3ServersideEncryption" : {
-        "type" : "string",
-        "enum" : [ "NONE", "SSE_AES256", "SSE_KMS_DEFAULT" ]
-      },
       "S3StorageClass" : {
         "type" : "string",
         "enum" : [ "STANDARD", "INTELLIGENT_TIERING", "STANDARD_IA", "ONEZONE_IA", "REDUCED_REDUNDANCY", "GLACIER", "GLACIER_IR", "DEEP_ARCHIVE" ]
@@ -508,7 +504,7 @@
           }
         },
         "type" : "object",
-        "required" : [ "id", "name", "protocol", "archived" ],
+        "required" : [ "id", "name", "protocol" ],
         "properties" : {
           "id" : {
             "description" : "Technical identifier for a storage profile. Must be unique UUID. Clients will use this as vendor in profile and provider in vault bookmark",
@@ -520,7 +516,7 @@
             "description" : "Displayed when choosing type of a new vault in dropdown."
           },
           "protocol" : {
-            "description" : "Storage protocol: S3 (permanent credentials) or S3STS (STS).",
+            "description" : "Storage protocol: S3STATIC (permanent credentials) or S3STS (STS).",
             "type" : "string",
             "$ref" : "#/components/schemas/Protocol"
           },
@@ -533,7 +529,7 @@
       "StorageProfileS3STSDto" : {
         "title" : "StorageProfileS3STSDto",
         "type" : "object",
-        "required" : [ "id", "name", "protocol", "archived", "storageClass", "region", "regions", "bucketPrefix", "stsRoleCreateBucketClient", "stsRoleCreateBucketHub", "bucketVersioning", "bucketEncryption", "stsRoleAccessBucketAssumeRoleWithWebIdentity", "stsSessionTag" ],
+        "required" : [ "id", "name", "protocol", "storageClass", "region", "regions", "bucketPrefix", "stsRoleCreateBucketClient", "stsRoleCreateBucketHub", "bucketVersioning", "stsRoleAccessBucketAssumeRoleWithWebIdentity", "stsSessionTag" ],
         "properties" : {
           "id" : {
             "description" : "Technical identifier for a storage profile. Must be unique UUID. Clients will use this as vendor in profile and provider in vault bookmark",
@@ -545,7 +541,7 @@
             "description" : "Displayed when choosing type of a new vault in dropdown."
           },
           "protocol" : {
-            "description" : "Storage protocol: S3 (permanent credentials) or S3STS (STS).",
+            "description" : "Storage protocol: S3STATIC (permanent credentials) or S3STS (STS).",
             "type" : "string",
             "$ref" : "#/components/schemas/Protocol"
           },
@@ -556,9 +552,10 @@
           "endpoint" : {
             "type" : [ "string", "null" ],
             "description" : "Full S3 endpoint URL for template upload/bucket creation. If unset, defaults to AWS SDK defaults.",
-            "examples" : [ "https://s3-us-gov-west-1.amazonaws.com" ]
+            "examples" : [ "https://s3-us-gov-west-1.amazonaws.com" ],
+            "pattern" : ""
           },
-          "withPathStyleAccessEnabled" : {
+          "pathStyleAccessEnabled" : {
             "type" : "boolean",
             "description" : "Whether to use path style for S3 endpoint for template upload/bucket creation.",
             "examples" : [ false ],
@@ -611,11 +608,6 @@
             "type" : [ "boolean", "null" ],
             "description" : "Enable bucket versioning upon bucket creation (null for MinIO)"
           },
-          "bucketEncryption" : {
-            "description" : "Enable bucket versioning upon bucket creation",
-            "type" : "string",
-            "$ref" : "#/components/schemas/S3ServersideEncryption"
-          },
           "stsRoleAccessBucketAssumeRoleWithWebIdentity" : {
             "type" : "string",
             "description" : "roleArn to for STS AssumeRoleWithWebIdentity (AWS and MinIO)",
@@ -641,7 +633,7 @@
       "StorageProfileS3StaticDto" : {
         "title" : "StorageProfileS3StaticDto",
         "type" : "object",
-        "required" : [ "id", "name", "protocol", "archived", "storageClass" ],
+        "required" : [ "id", "name", "protocol", "storageClass" ],
         "properties" : {
           "id" : {
             "description" : "Technical identifier for a storage profile. Must be unique UUID. Clients will use this as vendor in profile and provider in vault bookmark",
@@ -653,7 +645,7 @@
             "description" : "Displayed when choosing type of a new vault in dropdown."
           },
           "protocol" : {
-            "description" : "Storage protocol: S3 (permanent credentials) or S3STS (STS).",
+            "description" : "Storage protocol: S3STATIC (permanent credentials) or S3STS (STS).",
             "type" : "string",
             "$ref" : "#/components/schemas/Protocol"
           },
@@ -664,9 +656,10 @@
           "endpoint" : {
             "type" : [ "string", "null" ],
             "description" : "Full S3 endpoint URL for template upload/bucket creation. If unset, defaults to AWS SDK defaults.",
-            "examples" : [ "https://s3-us-gov-west-1.amazonaws.com" ]
+            "examples" : [ "https://s3-us-gov-west-1.amazonaws.com" ],
+            "pattern" : ""
           },
-          "withPathStyleAccessEnabled" : {
+          "pathStyleAccessEnabled" : {
             "type" : "boolean",
             "description" : "Whether to use path style for S3 endpoint for template upload/bucket creation.",
             "examples" : [ false ],
@@ -3172,7 +3165,7 @@
       },
       "put" : {
         "summary" : "creates or updates a vault",
-        "description" : "Creates or updates a vault with the given vault id. The creationTime in the vaultDto is always ignored. On creation, the current server time is used and the archived field is ignored. On update, only the name, description, and archived fields are considered.",
+        "description" : "Creates or updates a vault with the given vault id. The creationTime in the vaultDto is always ignored. The archived field is always ignored (use the dedicated endpoint). On creation, the current server time is used. On update, only the name and description fields are considered.",
         "parameters" : [ {
           "description" : "whether configuration for STS MinIO needs to be synched to Keycloak (defaults to false)",
           "in" : "query",
@@ -3369,6 +3362,9 @@
                 }
               }
             }
+          },
+          "402" : {
+            "description" : "number of licensed seats would be exceeded after unarchiving"
           },
           "403" : {
             "description" : "requesting user is neither a vault owner nor has the admin role"
